fixed deprecated jwt methods